Adding content and styling to the documents page

--- a/dokumenty.html
+++ b/dokumenty.html
@@ -80,36 +80,13 @@
 			<div class="container container--narrow">
 				<h2 class='h2 h2--title'>Dokumenty</h2>
 
-				<p class='p p--left'>Idea utworzenia Szkoły Języka polskiego im. św. Siostry Faustyny w Slough zrodziła
-					się w grudniu 2020 roku. Dzięki ogromnemu wsparciu księdza proboszcza Leszka Buby polska szkoła znów
-					zawitała
-					<br>
-					w progach kościoła w Slough.
-					<br>
-					<br>
-					Magdalena Witkowska pełni funkcje dyrektora ds. edukacyjnych, a Łukasz Jankiewicz jest dyrektorem
-					<br>
-					ds. finansowych.
-					<br>
-					<br>
-					Rozpoczęcie działalności szkoły jest zaplanowane na 11 września 2021 roku.
-					<br>
-					<br>
-					Głównym założeniem szkoły jest nauczanie języka polskiego, geografii i historii Polski oraz
-					nauczanie wiary zgodnie z założeniami Kościoła Katolickiego. Nauczanie i wychowywanie dzieci i
-					młodzieży
-					<br>
-					w duchu patriotyzmu oraz moralności i kultury osobistej. Kultywowanie i promowanie tradycji, a także
-					kultury polskiej wśród lokalnej społeczności.
-					<br>
-					<br>
-					Wzbudzanie w młodym człowieku szacunku do samego siebie i innych oraz otaczającego go świata.
-				</p>
-			</div>
-
-			<div class="img__container img__container--70">
-				<img src="https://static.wixstatic.com/media/cda177_a8524a842da4464fac8f2c0fa6e71bb9.jpg/v1/fill/w_940,h_409,al_c,q_85,usm_0.66_1.00_0.01/cda177_a8524a842da4464fac8f2c0fa6e71bb9.webp"
-					alt="" class="img img--o-nas">
+				<!-- Menu filter container -->
+				<div class="menu__container">
+					<div class="menu menu--1"></div>
+					<div class="menu menu--2"></div>
+					<div class="menu menu--3"></div>
+				</div>
+				
 			</div>
 
 		</section>
