Adding documents to the docs page

--- a/dokumenty.html
+++ b/dokumenty.html
@@ -82,9 +82,37 @@
 
 				<!-- Menu filter container -->
 				<div class="menu__container">
-					<div class="menu menu--1"></div>
-					<div class="menu menu--2"></div>
-					<div class="menu menu--3"></div>
+					<div class="menu menu--1">
+						<p class='p'>Zapisy dzieci</p>
+					</div>
+					<div class="menu menu--2">
+						<p class='p'>Praca w szkole</p>
+					</div>
+					<div class="menu menu--3">
+						<p class='p'>Regulamin</p>
+					</div>
+				</div>
+
+				<div class="container container--documents">
+					
+					<div class="pdf__container pdf__container--register">
+						<h3 class='h4'>Formularz rejestracyjny</h3>
+						<br>
+						<iframe src="./formularz_rejestracyjny.pdf" frameborder="0" class='pdf pdf--small'></iframe>
+					</div>
+
+					<div class="pdf__container pdf__container--regulation">
+						<h3 class='h4'>Regulamin Szkoly</h3>
+						<br>
+						<iframe src="./regulamin_szkoly.pdf" frameborder="0" class='pdf pdf--small'></iframe>
+					</div>
+
+					<div class="pdf__container pdf__container--work">
+						<h3 class='h4'>Podanie o prace</h3>
+						<br>
+						<iframe src="./podanie_o_prace.pdf" frameborder="0" class='pdf pdf--small'></iframe>
+					</div>
+
 				</div>
 				
 			</div>
