--- a/dokumenty.html
+++ b/dokumenty.html
@@ -82,6 +82,9 @@
 
 				<!-- Menu filter container -->
 				<div class="menu__container">
+					<div class="menu menu--0">
+						<p class='p'>Wszystkie</p>
+					</div>
 					<div class="menu menu--1">
 						<p class='p'>Zapisy dzieci</p>
 					</div>
