Working on fnctionality of active menu classes and document filtering

--- a/dokumenty.html
+++ b/dokumenty.html
@@ -82,7 +82,7 @@
 
 				<!-- Menu filter container -->
 				<div class="menu__container">
-					<div class="menu menu--0">
+					<div class="menu menu--0 menu--active">
 						<p class='p'>Wszystkie</p>
 					</div>
 					<div class="menu menu--1">
@@ -103,6 +103,8 @@
 							Formularz rejestracyjny
 						</summary>
 
+						<br>
+
 						<a href="./formularz_rejestracyjny.pdf" class="a" target='_blank'
 							title='Formularz Rejestracyjny PDF (Otwiera się w nowej karcie)'>
 							Formularz
@@ -116,6 +118,8 @@
 							Regulamin szkoły
 						</summary>
 
+						<br>
+
 						<a href="regulamin_szkoly.pdf" class="a" target='_blank'
 							title='Regulamin szkoły (Otwiera się w nowej karcie)'>
 							Regulamin Szkoły
@@ -127,6 +131,8 @@
 						<summary class='h4 summary'>
 							Podanie o prace
 						</summary>
+
+						<br>
 
 						<a href="/podanie_o_prace.pdf" class="a" target='_blank'
 							title='Podanie o prace (Otwiera się w nowej karcie)'>
