Footer background change and content change

--- a/dokumenty.html
+++ b/dokumenty.html
@@ -109,7 +109,7 @@
 							title='Formularz Rejestracyjny PDF (Otwiera się w nowej karcie)'>
 							Formularz
 							rejestracyjny
-							(Otwórz w nowej karcie)
+							(Otwiera w nowej karcie)
 						</a>
 					</details>
 
@@ -123,7 +123,7 @@
 						<a href="regulamin_szkoly.pdf" class="a" target='_blank'
 							title='Regulamin szkoły (Otwiera się w nowej karcie)'>
 							Regulamin Szkoły
-							(Otwórz w nowej karcie)
+							(Otwiera w nowej karcie)
 						</a>
 					</details>
 
@@ -137,7 +137,7 @@
 						<a href="/podanie_o_prace.pdf" class="a" target='_blank'
 							title='Podanie o prace (Otwiera się w nowej karcie)'>
 							Podanie o prace
-							(Otwórz w nowej karcie)
+							(Otwiera w nowej karcie)
 						</a>
 					</details>
 
