Adding changes from HTML

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<!-- Slogan image -->
 		<div class="img__container img__container--slogan">
-			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool">
+			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool" loading='lazy'>
 		</div>
 
 		<!-- Slogan -->
@@ -79,7 +79,7 @@
 
 		<!-- Image container -->
 		<div class="img__container img__container--header">
-			<img src="./assets/img-heading.webp" alt="Children with pens" class="img img--header">
+			<img src="./assets/img-heading.webp" alt="Children with pens" class="img img--header" loading='lazy'>
 		</div>
 
 		<div class="header__content">
@@ -111,14 +111,14 @@
 			<div class="img__container img__container--section">
 				<img class='img img--section'
 					src="https://static.wixstatic.com/media/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.jpg/v1/fill/w_594,h_341,al_c,q_80,usm_0.66_1.00_0.01/11062b_80b65efe5e0f45089de736e7c7c8fba3~mv2.webp"
-					alt="Child with an open book">
+					alt="Child with an open book" loading='lazy'>
 			</div>
 
 			<!-- Image container -->
 			<div class="img__container img__container--section img--margin">
 				<img class='img img--section'
 					src="https://static.wixstatic.com/media/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/970db9_54423ae2e5ea4d81aaa6da15b411c892~mv2.webp"
-					alt="Holy Bible opened with text">
+					alt="Holy Bible opened with text" loading='lazy'>
 			</div>
 
 			<!-- Image container -->
@@ -131,7 +131,7 @@
 					<!-- Space around container -->
 					<div class="space-around">
 						<div class="img__container img__container--overlay">
-							<img src="./assets/logo.png" alt="School Logo - St. Faustyna" class="img">
+							<img src="./assets/logo.png" alt="School Logo - St. Faustyna" class="img" loading='lazy'>
 						</div>
 						<div class="btn__container btn__container--small">
 							<button class="btn btn--more"><a class='a a--default' href='patron.html'>Czytaj
@@ -142,7 +142,7 @@
 
 				<img class='img img--section'
 					src="https://static.wixstatic.com/media/62e75bfd762f474ca9a42f40162ebc69.jpg/v1/fill/w_592,h_341,al_c,q_80,usm_0.66_1.00_0.01/62e75bfd762f474ca9a42f40162ebc69.webp"
-					alt="Praying hands in church">
+					alt="Praying hands in church" loading='lazy'>
 			</div>
 
 		</section>
@@ -155,14 +155,14 @@
 
 				<div class="img__container">
 					<img src="https://static.wixstatic.com/media/84770f_074c70ccfa0b48098b3cb614b925fa2f~mv2.gif"
-						alt="Animated blue pencil" class="img">
+						alt="Animated blue pencil" class="img" loading='lazy'>
 				</div>
 
 				<h2 class='h2'>Zapisy na nowy rok szkolny 2021/22</h2>
 
 				<div class="img__container">
 					<img src="https://static.wixstatic.com/media/84770f_3c50dffee26640ef92478d9f7a58f6b4~mv2.gif"
-						alt="Animated seperator" class="img">
+						alt="Animated seperator" class="img" loading='lazy'>
 				</div>
 
 				<div class="btn__container btn__container--no-margin">
@@ -179,7 +179,7 @@
 
 					<div class="img__container">
 						<img src="https://static.wixstatic.com/media/84770f_c8e2952a814b41589750779df9fc670c~mv2.gif"
-							alt="3 colourfull tears" class="img">
+							alt="3 colourfull tears" class="img" loading='lazy'>
 					</div>
 
 					<h2 class='h2'>Galeria</h2>
@@ -201,7 +201,7 @@
 
 				<div class="img__container">
 					<img src="https://static.wixstatic.com/media/516c037607f54b3587a8f4c2ed4b9d6b.jpg/v1/crop/x_0,y_0,w_3736,h_2848/fill/w_126,h_91,al_c,q_80,usm_0.66_1.00_0.01/Alarm%20Clock.webp"
-						alt="Red alarm clock" class="img img--rounded img--border">
+						alt="Red alarm clock" class="img img--rounded img--border" loading='lazy'>
 				</div>
 
 				<p class="p">
@@ -223,7 +223,7 @@
 
 				<div class="img__container">
 					<img src="https://static.wixstatic.com/media/11062b_00978c20f8094fefa00207baec7aba80~mv2.jpg/v1/fill/w_160,h_101,al_c,q_80,usm_0.66_1.00_0.01/Leather%20Wallets.webp"
-						alt="Wallet" class="img img--rounded img--border">
+						alt="Wallet" class="img img--rounded img--border" loading='lazy'>
 				</div>
 
 				<h2 class='h2'>Płatności</h2>
