--- a/kalendarz.html
+++ b/kalendarz.html
@@ -34,7 +34,7 @@
 
 		<!-- Slogan image -->
 		<div class="img__container img__container--slogan">
-			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool">
+			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool" loading='lazy'>
 		</div>
 
 		<!-- Slogan -->
@@ -90,11 +90,11 @@
 			<div class="container container--space-evenly">
 
 				<div class="img__container">
-					<img src="./assets/kalendarz1.webp" alt="Szkolny kalendarz" class="img in-modal">
+					<img src="./assets/kalendarz1.webp" alt="Szkolny kalendarz" class="img in-modal" loading='lazy'>
 				</div>
 
 				<div class="img__container">
-					<img src="./assets/kalendarz2.webp" alt="Szkolny kalendarz" class="img in-modal">
+					<img src="./assets/kalendarz2.webp" alt="Szkolny kalendarz" class="img in-modal" loading='lazy'>
 				</div>
 
 			</div>
