--- a/o-nas.html
+++ b/o-nas.html
@@ -34,7 +34,7 @@
 
 		<!-- Slogan image -->
 		<div class="img__container img__container--slogan">
-			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool">
+			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool" loading='lazy'>
 		</div>
 
 		<!-- Slogan -->
@@ -109,7 +109,7 @@
 
 			<div class="img__container img__container--70">
 				<img src="https://static.wixstatic.com/media/cda177_a8524a842da4464fac8f2c0fa6e71bb9.jpg/v1/fill/w_940,h_409,al_c,q_85,usm_0.66_1.00_0.01/cda177_a8524a842da4464fac8f2c0fa6e71bb9.webp"
-					alt="" class="img img--o-nas">
+					alt="" class="img img--o-nas" loading='lazy'>
 			</div>
 
 		</section>
