--- a/zapisy.html
+++ b/zapisy.html
@@ -34,7 +34,7 @@
 
 		<!-- Slogan image -->
 		<div class="img__container img__container--slogan">
-			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool">
+			<img class='img img--slogan' src="./assets/logo.png" alt="Pencil case tool" loading='lazy'>
 		</div>
 
 		<!-- Slogan -->
