--- a/dokumenty.html
+++ b/dokumenty.html
@@ -94,6 +94,9 @@
 					<div class="menu menu--3">
 						<p class='p'>Praca w szkole</p>
 					</div>
+					<div class="menu menu--4">
+						<p class='p'>Legitymacja ucznia</p>
+					</div>
 				</div>
 
 				<div class="container container--documents">
@@ -137,6 +140,20 @@
 						<a href="/podanie_o_prace.pdf" class="a" target='_blank'
 							title='Podanie o prace (Otwiera się w nowej karcie)'>
 							Podanie o prace
+							(Otwiera w nowej karcie)
+						</a>
+					</details>
+
+					<details class='details pdf__container pdf__container--legitymacja'>
+						<summary class='h4 summary'>
+							Wniosek o legitymacje ucznia
+						</summary>
+
+						<br>
+
+						<a href="/legitymacja_ucznia.pdf" class="a" target='_blank'
+							title='Wniosek o legitymacje ucznia (Otwiera się w nowej karcie)'>
+							Wniosek o legitymacje ucznia
 							(Otwiera w nowej karcie)
 						</a>
 					</details>
