Added another document to the doc page

--- a/dokumenty.html
+++ b/dokumenty.html
@@ -97,6 +97,9 @@
 					<div class="menu menu--4">
 						<p class='p'>Legitymacja ucznia</p>
 					</div>
+					<div class="menu menu--5">
+						<p class='p'>Podstawa programowa</p>
+					</div>
 				</div>
 
 				<div class="container container--documents">
@@ -155,6 +158,19 @@
 							title='Wniosek o legitymacje ucznia (Otwiera się w nowej karcie)'>
 							Wniosek o legitymacje ucznia
 							(Otwiera w nowej karcie)
+						</a>
+					</details>
+
+					<details class='details pdf__container pdf__container--podstawa-programowa'>
+						<summary class='h4 summary'>
+							Podstawa programowa
+						</summary>
+
+						<br>
+
+						<a href='/podstawa_programowa.pdf' class="a" target='_blank'
+							title='Podstawa programowa (Otwiera w nowej karcie)'>
+							Podstawa programowa (Otwiera w nowej karcie)
 						</a>
 					</details>
 
