Changes and content added to different pages

--- a/o-nas.html
+++ b/o-nas.html
@@ -80,7 +80,7 @@
 			<div class="container container--narrow">
 				<h2 class='h2 h2--title'>O nas</h2>
 
-				<p class='p p--left'>Idea utworzenia Szkoły Języka polskiego im. św. Siostry Faustyny w Slough zrodziła
+				<p class='p p--left'>Idea utworzenia Szkoły Języka Polskiego im. św. Siostry Faustyny w Slough zrodziła
 					się w grudniu 2020 roku. Dzięki ogromnemu wsparciu księdza proboszcza Leszka Buby polska szkoła znów
 					zawitała
 					<br>
