Changes added some images and styling

--- a/dokumenty.html
+++ b/dokumenty.html
@@ -75,7 +75,7 @@
 	<main class='main'>
 
 		<!-- Section -->
-		<section class="section section--center">
+		<section class="section section--center page page--documents">
 
 			<div class="container container--narrow">
 				<h2 class='h2 h2--title'>Dokumenty</h2>
