--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 		<div class="header__content">
 			<h2 class='h2'>O szkole</h2>
-			<p class='p'>
+			<p class='p p--white'>
 				Nasza misja - wychowanie dzieci i młodzieży w duchu wartości chrześcijańskich oraz, kultywowanie
 				polskiej
 				tożsamości a przede wszystkim nauczanie języka polskiego, historii polski z elementami geografii,
