--- a/patron.html
+++ b/patron.html
@@ -93,7 +93,7 @@
 
 			<div class="container">
 				<iframe src="https://prezi.com/embed/mwxqdkvhglki/" class="container--prezi" frameborder="0"
-					allow="autoplay; fullscreen"></iframe>
+					allow="autoplay; fullscreen" loading='lazy'></iframe>
 				<br>
 				<a href="https://prezi.com/mwxqdkvhglki/sw-siostra-faustyna/" class="a a--social" target='_blank'>
 					<p class="p p--secondary">Źródło</p>
