Small JS changes

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 	<header class='header'>
 
 		<!-- Image container -->
-		<div class="img__container img__container--header">
+		<!-- <div class="img__container img__container--header">
 			<img src="./assets/img-heading.webp" alt="Children with pens" class="img img--header" loading='lazy'>
-		</div>
+		</div> -->
 
 		<div class="header__content">
 			<h2 class='h2'>O szkole</h2>
