Changing bank account details

--- a/oplaty.html
+++ b/oplaty.html
@@ -115,9 +115,11 @@
 					<br>
 					<strong><span class='text text--underline'>Dane konta bankowego</span></strong>
 					<br>
-					<strong>Numer konta: 53427927</strong>
+					<strong>Typ Konta:</strong> Business Account
 					<br>
-					<strong>Sort Code: 20 - 78 - 61</strong>
+					<strong>Numer konta:</strong> 53972341
+					<br>
+					<strong>Sort Code:</strong> 01 - 08 - 15
 					<br>
 					<br>
 					<strong><em>Czesne tytułem:</strong> Imie i nazwisko ucznia + aktualna klasa + czesne / depozyt
