Added the bank account name

--- a/oplaty.html
+++ b/oplaty.html
@@ -117,6 +117,8 @@
 					<br>
 					<strong>Typ Konta:</strong> Business Account
 					<br>
+					<strong>Nazwa Konta:</strong> Saint Sister Faustyna Polish Language School
+					<br>
 					<strong>Numer konta:</strong> 53972341
 					<br>
 					<strong>Sort Code:</strong> 01 - 08 - 15
