Additional documents added and changed the presentation on patron page

--- a/dokumenty.html
+++ b/dokumenty.html
@@ -100,6 +100,9 @@
 					<div class="menu menu--5">
 						<p class='p'>Podstawa programowa</p>
 					</div>
+					<div class="menu menu--6">
+						<p class='p'>Upoważnienie do odbioru</p>
+					</div>
 				</div>
 
 				<div class="container container--documents">
@@ -171,6 +174,19 @@
 						<a href='/podstawa_programowa.pdf' class="a" target='_blank'
 							title='Podstawa programowa (Otwiera w nowej karcie)'>
 							Podstawa programowa (Otwiera w nowej karcie)
+						</a>
+					</details>
+
+					<details class='details pdf__container pdf__container--upowaznienie-do-odbioru'>
+						<summary class='h4 summary'>
+							Upoważnienie do odbioru
+						</summary>
+
+						<br>
+
+						<a href='/upowaznienie_do_odbioru.pdf' class="a" target='_blank'
+							title='Upoważnienie do odbioru (Otwiera w nowej karcie)'>
+							Upoważnienie do odbioru (Otwiera w nowej karcie)
 						</a>
 					</details>
 
