--- a/patron.html
+++ b/patron.html
@@ -91,9 +91,8 @@
 
 			</div>
 
-			<div class="container">
-				<iframe src="https://prezi.com/embed/mwxqdkvhglki/" class="container--prezi" frameborder="0"
-					allow="autoplay; fullscreen" loading='lazy'></iframe>
+			<div class="container container--presentation">
+				<iframe class='presentation' src="https://onedrive.live.com/embed?cid=ED121BDEEF680A53&amp;resid=ED121BDEEF680A53%211089731&amp;authkey=AJ5c9xF0tfS9fKw&amp;em=2&amp;wdAr=1.7777777777777777" frameborder="0" loading="lazy">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
 				<br>
 				<a href="https://prezi.com/mwxqdkvhglki/sw-siostra-faustyna/" class="a a--social" target='_blank'>
 					<p class="p p--secondary">Źródło</p>
