--- a/kalendarz.html
+++ b/kalendarz.html
@@ -100,6 +100,20 @@
 			</div>
 
 		</section>
+		
+		<div class="container">
+			<br>
+			<h3 class="h3">Strefa Rodzica</h3>
+		</div>
+
+		<section class="section section--spacebetween">
+
+			<div class="container container--space-between">
+				<iframe src="./lista_lektur.pdf#toolbar=0&navpanes=0&scrollbar=0" frameborder="0" class='pdf pdf--medium'></iframe>
+				<iframe src="./plan_dnia.pdf#toolbar=0&navpanes=0&scrollbar=0" frameborder="0" class='pdf pdf--medium'></iframe>
+			</div>
+
+		</section>
 
 	</main>
 
