Changed the email address on all pages

--- a/index.html
+++ b/index.html
@@ -250,10 +250,10 @@
 						<br>
 						Slough Berkshire
 					</p>
-					<a class='a a--default' href='mailto:info@szkolajezykapolskiegoslough.org?subject=Polska Szkola'>
+					<a class='a a--default' href='mailto:szkolajezykapolskiegoslough@gmail.com?subject=Polska Szkola'>
 						<p class="p p--white">
 							<i class="fas fa-at"></i>
-							info@szkolajezykapolskiegoslough.org
+							szkolajezykapolskiegoslough@gmail.com
 						</p>
 					</a>
 					<a class='a a--default' href='tel:07723646812'>
