--- a/kontakt.html
+++ b/kontakt.html
@@ -95,7 +95,7 @@
 
 				<div class="container container--narrow">
 					<p class="p p--left">Email: <a class='a'
-							href='mailto:info@szkolajezykapolskiegoslough.org?subject=Polska Szkola'>info@szkolajezykapolskiegoslough.org</a>
+							href='mailto:szkolajezykapolskiegoslough@gmail.com?subject=Polska Szkola'>szkolajezykapolskiegoslough@gmail.com</a>
 					</p>
 
 					<br>
