--- a/oplaty.html
+++ b/oplaty.html
@@ -105,7 +105,7 @@
 					<br>
 					W przypadku jakichkolwiek wątpliwości, prosimy o kontakt na adres e-mail:
 					<a class='a a--social'
-						href='mailto:info@szkolajezykapolskiegoslough.org?subject=Polska Szkola'>info@szkolajezykapolskiegoslough.org</a>
+						href='mailto:szkolajezykapolskiegoslough@gmail.com?subject=Polska Szkola'>szkolajezykapolskiegoslough@gmail.com</a>
 					<br>
 					<br>
 					<em>
