--- a/zapisy.html
+++ b/zapisy.html
@@ -85,7 +85,7 @@
 					serdecznie prosimy o wydrukowanie poniższego formularza, wypełnienie go oraz wysłanie na nasz
 					email:
 					<a class='a'
-						href='mailto:info@szkolajezykapolskiegoslough.org?subject=Formularz Rejestracyjny'>info@szkolajezykapolskiegoslough.org</a>
+						href='mailto:szkolajezykapolskiegoslough@gmail.com?subject=Formularz Rejestracyjny'>szkolajezykapolskiegoslough@gmail.com</a>
 				</p>
 				</p>
 			</div>
