--- a/index.html
+++ b/index.html
@@ -274,6 +274,20 @@
 
 		</section>
 
+		<!-- Section -->
+		<section class="section section--center">
+
+			<h2 class="h2 text text--blue">Aktualnosci</h2>
+			<br>
+			<div class="container container--space-evenly">
+
+				<iframe src="./rozpoczecie_roku_szkolnego.pdf" frameborder="0" class='pdf pdf--medium'
+					toolbar=0></iframe>
+				<iframe src="./zapisy_banner.pdf" frameborder="0" class='pdf pdf--medium' toolbar=0></iframe>
+			</div>
+
+		</section>
+
 	</main>
 
 	<footer class="footer">
