Moved the new elements in the index page

--- a/index.html
+++ b/index.html
@@ -148,6 +148,24 @@
 		</section>
 
 		<!-- Section -->
+		<section class="section section--center">
+
+			<h2 class="h2 text text--blue">Aktualnosci</h2>
+			<br>
+			<div class="container container--space-evenly">
+
+				<div class="img__container img__container--stretch">
+					<img src="./assets/informator.png" alt="Baner informacyjny na temat rejestracji" class="img">
+				</div>
+
+				<div class="img__container img__container--stretch">
+					<img src="./assets/plakat.png" alt="Platak na temat rejestracji" class="img">
+				</div>
+			</div>
+
+		</section>
+
+		<!-- Section -->
 		<section class="section section--banner">
 
 			<!-- Banner -->
@@ -270,20 +288,6 @@
 						allowfullscreen="" loading="lazy" class='map'></iframe>
 				</div>
 
-			</div>
-
-		</section>
-
-		<!-- Section -->
-		<section class="section section--center">
-
-			<h2 class="h2 text text--blue">Aktualnosci</h2>
-			<br>
-			<div class="container container--space-evenly">
-
-				<iframe src="./rozpoczecie_roku_szkolnego.pdf" frameborder="0" class='pdf pdf--medium'
-					toolbar=0></iframe>
-				<iframe src="./zapisy_banner.pdf" frameborder="0" class='pdf pdf--medium' toolbar=0></iframe>
 			</div>
 
 		</section>
